[tool.poetry]
name = "hackathon-cards-backend"
version = "0.1.0"
description = "Backend for MintBean.io 2021-07 Hackathon"
authors = ["Brian Ibbotson <brian@quinceleaf.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-redis = "^5.0.0"
channels = "^3.0.4"
djangorestframework = "^3.12.4"
social-auth-app-django = "^4.0.0"
python-dotenv = "^0.19.0"
djangorestframework-simplejwt = "^4.7.2"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
